fixing z-index

--- a/src/app/add-review/add-review.component.css
+++ b/src/app/add-review/add-review.component.css
@@ -31,6 +31,8 @@
   padding-top: 0;
   padding-bottom: 0;
   margin-bottom: 0;
+  position: relative;
+  z-index: 1;
 }
 
 .display-4 {
