--- a/src/app/list-view/list-view.component.css
+++ b/src/app/list-view/list-view.component.css
@@ -32,6 +32,7 @@
     padding-top: 0;
     padding-bottom: 0;
     margin-bottom: 0;
+    position: relative;
     z-index: 2;
 }
 
@@ -47,7 +48,7 @@
 
 .card-1 { 
     font-family: 'Roboto', sans-serif;
-    width: 35%;
+    width: 38%;
     padding-top: 2rem;
     padding-left: 1rem;
 }
@@ -72,7 +73,7 @@
 
 .card-2 {
     font-family: 'Roboto', sans-serif;
-    width: 65%;
+    width: 60%;
 }
  
 li { 
@@ -125,6 +126,7 @@ span {
     .card-1 {
         position: relative;
         width: 100%;
+        z-index: 1;
     }
 
     .searchbar {
