--- a/src/app/map-view/map-view.component.css
+++ b/src/app/map-view/map-view.component.css
@@ -32,6 +32,7 @@
     padding-top: 0;
     padding-bottom: 0;
     margin-bottom: 0;
+    position: relative;
     z-index: 2;
 }
 
@@ -141,10 +142,6 @@ a {
 }
 
 @media(max-width: 575px) {
-    
-    agm-map {
-        max-width: 80%;
-    }
 
     .map {
         padding: 2rem;
