--- a/src/app/search/search.component.css
+++ b/src/app/search/search.component.css
@@ -32,19 +32,21 @@
     padding-top: 1rem;
     padding-bottom: 0;
     margin-bottom: 0;
-    z-index: 2;
+    position: relative;
+    z-index: 0;
+    
 }
     
 .display-4 {
     font-family: 'Open', sans-serif;
     color: white;
-    z-index: 2;
     text-shadow:
     -1px -1px 0 #000,
     1px -1px 0 #000,
     -1px 1px 0 #000,
     1px 1px 0 #000; 
-    z-index: 2;
+    position: relative;
+    z-index: 1;
 } 
 
 .not-found {
@@ -54,8 +56,17 @@
     line-height:1.5;  
 }
 
+ng-template {
+    z-index: 1;
+    position: relative;
+}
+
 .searchbar {
     padding-top: 2rem;
+}
+
+ul {
+    z-index: 1;
 }
     
 li { 
@@ -65,7 +76,7 @@ li {
     font-size:100%;
     line-height:1.5;
     list-style: none;
-    z-index: 1;
+    z-index: 2;
 }
 
 span {
